@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-21T08:26:43Z",
-  "count_outdated" : 746,
-  "uniques_outdated" : 388,
-  "count" : 754,
+  "timestamp" : "2022-08-21T16:30:38Z",
+  "count_outdated" : 748,
+  "uniques_outdated" : 389,
+  "count" : 756,
   "uniques" : 396,
   "clones" : [
-    {
-      "timestamp": "2022-08-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 1,
@@ -49,8 +42,8 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
