@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-08-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -34,7 +29,7 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
