@@ -1,3 +1,10 @@
+2022-08-21T16:30:38Z:
+* notice: last 14d: unq all: 4 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 388 746 / 396 754
+* notice: next accum: outdated-unq outdated-all / unq all: 389 748 / 396 756
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-08-07] / [2022-08-21]
+
 2022-08-21T08:26:43Z:
 * notice: last 14d: unq all: 4 8
 * notice: prev accum: outdated-unq outdated-all / unq all: 388 746 / 395 754
